@@ -315,6 +315,8 @@ input#view_search_string, input.typeahead.tt-hint		{color:#FFF;}
 #search_div					{color:#FFF;}
 a#search_link				{border:1px solid #2f6381; color:#fff; background:linear-gradient(#68c7ff,#2d5d7b); background:-webkit-linear-gradient(#68c7ff,#2d5d7b); text-shadow:0 -1px 0 #366e90;}
 a#search_link:hover			{border:1px solid #2d5d7b; background:linear-gradient(#50a0d2,#2d5d7b); background:-webkit-linear-gradient(#50a0d2,#2d5d7b); text-shadow:0 -1px 0 #2d5d7b;}
+a.search_link_disable		{border:1px solid #fff; color:#fff; background:linear-gradient(rgba(255, 255, 255, 0.6),rgba(255, 255, 255, 0.8)); background:-webkit-linear-gradient(rgba(255, 255, 255, 0.6),rgba(255, 255, 255, 0.8));}
+a.search_link_disable:hover	{cursor:default;}
 .search_head				{color:#53B4ED; letter-spacing:5px; font-size:18px; font-weight:bold; margin-bottom:25px;}
 .search_head span			{color:#fff; font-weight:normal; letter-spacing:1px; margin-left:-5px;}
 
