@@ -910,7 +910,7 @@ Themes
 Settings
 
 #search_recipient_txt
-Recipient
+Recipient Country
 
 #search_donor_txt
 Donor
