@@ -30,7 +30,7 @@
 	<tr>
 		<td>
 			The new <span class="discover">DISCOVER</span> feature helps find activities published to the IATI Standard based on keywords - it was originally developed to help people who wanted to find information on specific humanitarian crises, including the Ebola outbreak.
-			<p><b>This is a new feature of d-portal and development is ongoing</b> - as always feedback (<a href="#">email</a> or <a href="#">GitHub</a>) is very welcome.</p>
+			<p><b>This is a new feature of d-portal and development is ongoing</b> - as always feedback (<a href="mailto:support@iatistandard.org">email</a> or <a href="https://github.com/devinit/D-Portal/issues">GitHub</a>) is very welcome.</p>
 			<div><ul>
 			<li>DISCOVER allows you to type in one or more keywords – it searches the Titles and Descriptions of <span class="underline">all</span> IATI activities and provides results in the usual d-portal format <span class="accent">(stats and charts which you can explore by clicking through to tables)</span></li>
 
@@ -70,19 +70,19 @@
 			</select>
 		</div><div class="search_wrap">
 			<div class="search_label">
-				<img src="{flava}search_sector.png" alt="Sector icon" width="13" height="13"/>{search_sector_txt}
-			</div>
-			<select id="view_search_select_sector" class="chosen">
-				<option value></option>
-				{search_options_sector}
-			</select>
-		</div><div class="search_wrap">
-			<div class="search_label">
 				<img src="{flava}search_category.png" alt="Sector Category icon" width="13" height="13"/>{search_sectorcategory_txt}
 			</div>
 			<select id="view_search_select_category" class="chosen">
 				<option value></option>
 				{search_options_category}
+			</select>
+		</div><div class="search_wrap">
+			<div class="search_label">
+				<img src="{flava}search_sector.png" alt="Sector icon" width="13" height="13"/>{search_sector_txt}
+			</div>
+			<select id="view_search_select_sector" class="chosen">
+				<option value></option>
+				{search_options_sector}
 			</select>
 		</div><div class="search_wrap">
 			<div class="search_label">
