@@ -8,6 +8,8 @@ Removed Generator link
 Added DISCOVER filter header
 Minor css changes
 Cleaned up feedback link
+Changed Recipient to Recipient Country
+Add disabled state for search link
 
 
 Development Portal (2016-11-22 shi)
